# -E-COMMERCE-STREAMING-ANALYTICS-PLATFORM

./: .env.example  .gitignore  Makefile  README.md  dagster.yaml  docker-compose.yml  experiment_analysis_template.ipynb  pyproject.toml  requirements.txt
.telemetry/: id.yaml
api/: db.py  main.py  requirements.txt
api/agent/: graph.py  prompts.py  tools.py
api/routers/: agent.py  business.py  experiments.py  funnel.py  monitoring.py  realtime.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
docs/: experiment_catalog.json
docs/architecture/: BIGQUERY_ARCHITECTURE.md  DATA_PROFILE_REPORT.md  KAFKA_TOPICS.md  LAMBDA_ARCHITECTURE.md  PHASE_1_ARCHITECTURE.md
docs/iam/: s3_dagster_policy.json  s3_lifecycle_policy.json
docs/phase-1-infrastructure/: PHASE_1B_S3_DATALAKE.md  PHASE_1C_MONGODB_SETUP.md  PHASE_1F_KAFKA_SETUP.md
docs/phase-2-data-generation/: PHASE_2A_AB_EXPERIMENTS.md  PHASE_2B_EXPERIMENT_ASSIGNMENTS.md  PHASE_2C_CLICKSTREAM_EVENTS.md  PHASE_2D_KAFKA_PRODUCERS.md  PHASE_2E_MONGODB_LOAD.md  PHASE_2F_VALIDATION.md
docs/phase-3-batch-layer/: PHASE_3A_SOURCE_ASSETS.md  PHASE_3B_STAGING_ASSETS.md  PHASE_3C_DIMENSION_ASSETS.md  PHASE_3D_FACT_ASSETS.md  PHASE_3E_AGG_FACT_ASSETS.md  PHASE_3F_KAFKA_CONSUMERS.md  (+4 more)
ecommerce_analytics/: __init__.py  io_managers.py
notebooks/: exp_001_bayesian_analysis.ipynb  exp_001_free_shipping_threshold.ipynb  multiple_testing_correction.ipynb  power_analysis.ipynb
output/: failure_scenario_report.json  integration_test_report.json
scripts/: bigquery_create_datasets.py  bigquery_create_experiment_views.py  bigquery_create_realtime_views.py  bigquery_create_tables.py  bigquery_create_tables.sql  build_excel_workbook.py  check_bigquery_data.py  create_kafka_topics.ps1  create_kafka_topics.py  create_kafka_topics.sh  download_olist.py  excel_data.py  explore_olist_data.py  export_experiment_csv.py  generate_clickstream_events.py  generate_data_profile.py  generate_experiment_assignments.py  integration_test.py  load_mongodb_phase2e.py  load_olist_to_bigquery.py  mongodb_create_collections.py  mongodb_load_olist.py  phase1_test_e2e.py  phase1_test_kafka_to_bigquery.py  phase1_test_s3_to_bigquery.py  phase2_verify.py  redshift_create_schema.sql  run_producers.py  s3_upload_olist_bronze.py  sync_realtime_to_bigquery.py  test_kafka_partition_ordering.py  test_kafka_produce_consume.py  validate_event_data_quality.py  validate_mongodb_phase2e.py  verify_olist_download.py
tests/: failure_scenarios.py  phase1_test_kafka_to_mongodb.py  phase1_verify_connections.py  test_consumers.py  test_producers.py
(+113 files in other folders)
