[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-streaming-analytics"
version = "1.0.0"
description = "E-Commerce Streaming Analytics Platform with A/B Testing, Kafka, Dagster, and React Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.5.16",
    "boto3>=1.28.0",
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-gcp>=0.21.0",
    "dagster-aws>=0.21.0",
    "kafka-python>=2.0.2",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "google-cloud-bigquery>=3.0.0",
    "pandas-gbq>=0.26.0",
    "pymongo>=4.0.0",
    "requests>=2.28.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
    "papermill>=2.4.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "dnspython>=2.4.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecommerce_analytics*", "api*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
